<?xml version="1.0"?>
<package format="2">
  <name>active_radar</name>
  <version>0.0.0</version>
  <description>The active_radar package</description>

  <author email="vit.petrik@gmail.com">Vit Petrik</author>
  <maintainer email="vit.petrik@gmail.com">Vit Petrik</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>mrs_lib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_runtime</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
    generate_messages_cpp
  </export>

</package>
